--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,28 +1,13 @@
-version: 2
-jobs:
-  build:
-    docker:
-      - image: 'circleci/node:12.13.0'
-      # if need to wait .. => https://support.circleci.com/hc/en-us/articles/360006773953-Race-Conditions-Wait-For-Database
-      - image: trufflesuite/ganache-cli:v6.6.0
-        command: [ganache-cli -h 0.0.0.0 -p 8545 -i 1337 -s foobar -e 100000000000000000000]
-    steps:
-      - checkout
-      - run:
-          name: install
-          command: npm install
-      - run:
-          name: commitlint
-          command: npx --no-install commitlint-circle
-      - run:
-          name: lint
-          command: npm run lint
-      - run:
-          name: test
-          command: npm run test
-      - run:
-          name: build
-          command: npm run build
-      - run:
-          name: release
-          command: npm run semantic-release
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
+version: 2.1
+# Use a package of configuration called an orb.
+orbs:
+  # Declare a dependency on the welcome-orb
+  welcome: circleci/welcome-orb@0.4.1
+# Orchestrate or schedule a set of jobs
+workflows:
+  # Name the workflow "welcome"
+  welcome:
+    # Run the welcome/run job in its own container
+    jobs:
+      - welcome/run
