--- a/package.json
+++ b/package.json
@@ -44,12 +44,9 @@
     ]
   },
   "peerDependencies": {
-    "ethers": "^4.0.45"
+    "ethers": ">=4.0.45"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "lodash": "^4.17.15",
-    "semantic-release": "^17.0.4",
     "truffle": "5.1.3",
     "typechain": "^1.0.5",
     "typechain-target-ethers": "^1.0.4"
@@ -73,6 +70,7 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "commitizen": "4.0.3",
+    "dotenv": "^8.2.0",
     "eslint": "^5.6.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^6.9.0",
@@ -85,6 +83,7 @@
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
     "prettier-plugin-solidity": "^1.0.0-alpha.36",
+    "semantic-release": "^17.0.4",
     "solhint": "^2.3.0",
     "solhint-plugin-prettier": "0.0.3",
     "solium": "^1.2.5",
