--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "ethers": "^4.0.46",
     "ganache-cli": "^6.9.1",
     "git-cz": "3.2.1",
     "jest": "^25.1.0",
