--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "copy-types": "rm -rf types && mkdir -p types && cp src/contracts/*.d.ts types/ && mkdir -p dist/ts/contracts && cp src/contracts/*.d.ts dist/ts/contracts",
     "commit": "git-cz",
     "commit:retry": "npm run commit -- --retry",
-    "lint:js": "eslint . --ext .js",
-    "lint:js:fix": "eslint . --ext .js --fix",
+    "lint:js": "eslint src --ext .js --ext .ts",
+    "lint:js:fix": "npm run lint:js -- --fix",
     "lint:sol": "./node_modules/.bin/solhint contracts/**/*.sol",
     "lint:sol:fix": "./node_modules/.bin/prettier --write contracts/**/*.sol",
     "lint": "npm run lint:sol && npm run lint:js",
@@ -31,7 +31,7 @@
     "test:js": "jest --testPathPattern=src",
     "test": "npm run test:sol && npm run test:js",
     "truffle": "truffle",
-    "typechain": "typechain --target ethers \"build/contracts/*.json\" --outDir src/contracts && npm run copy-types",
+    "typechain": "typechain --target ethers-v5 \"build/contracts/*.json\" --outDir src/contracts && npm run copy-types",
     "postinstall": "node scripts/postInstall",
     "semantic-release": "semantic-release"
   },
@@ -54,28 +54,31 @@
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
     "@babel/plugin-proposal-optional-chaining": "^7.8.3",
-    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-env": "^7.11.0",
     "@babel/preset-typescript": "^7.8.3",
     "@babel/register": "^7.8.6",
     "@commitlint/cli": "8.2.0",
     "@commitlint/config-conventional": "8.2.0",
     "@commitlint/prompt": "8.2.0",
     "@ls-age/commitlint-circle": "1.0.0",
+    "@typechain/ethers-v5": "^1.0.0",
     "@types/jest": "^25.1.4",
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.1.0",
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "commitizen": "4.0.3",
     "dotenv": "^8.2.0",
-    "eslint": "^5.6.1",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-chai-expect": "^1.1.1",
     "eslint-plugin-chai-friendly": "^0.4.1",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "ethers": "^4.0.46",
+    "ethers": "^5.0.8",
     "ganache-cli": "^6.9.1",
     "git-cz": "3.2.1",
     "jest": "^25.1.0",
@@ -85,10 +88,9 @@
     "solhint": "^2.3.0",
     "solhint-plugin-prettier": "0.0.3",
     "solium": "^1.2.5",
-    "truffle": "5.1.3",
-    "typechain": "^1.0.5",
-    "typechain-target-ethers": "^1.0.4",
-    "typescript": "^3.8.3"
+    "truffle": "5.1.37",
+    "typechain": "^2.0.0",
+    "typescript": "^3.9.7"
   },
   "config": {
     "commitizen": {
