--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "@commitlint/config-conventional": "8.2.0",
     "@commitlint/prompt": "8.2.0",
     "@ls-age/commitlint-circle": "1.0.0",
+    "@opengsn/gsn": "^2.0.3",
+    "@openzeppelin/contracts": "^3.3.0",
     "@typechain/ethers-v5": "^1.0.0",
     "@types/jest": "^25.1.4",
     "@typescript-eslint/eslint-plugin": "^3.8.0",
@@ -82,11 +84,11 @@
     "ganache-cli": "^6.9.1",
     "git-cz": "3.2.1",
     "jest": "^25.1.0",
-    "prettier": "^1.19.1",
-    "prettier-plugin-solidity": "^1.0.0-alpha.36",
+    "prettier": "^2.2.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.2",
     "semantic-release": "^17.0.4",
-    "solhint": "^2.3.0",
-    "solhint-plugin-prettier": "0.0.3",
+    "solhint": "^3.3.2",
+    "solhint-plugin-prettier": "0.0.5",
     "solium": "^1.2.5",
     "truffle": "5.1.37",
     "typechain": "^2.0.0",
