--- a/package.json
+++ b/package.json
@@ -49,47 +49,47 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.13.16",
-    "@babel/core": "^7.13.16",
+    "@babel/core": "^7.14.0",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.13.8",
     "@babel/plugin-proposal-optional-chaining": "^7.13.12",
-    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-env": "^7.14.0",
     "@babel/preset-typescript": "^7.13.0",
     "@babel/register": "^7.13.16",
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
     "@commitlint/prompt": "^12.1.1",
     "@ls-age/commitlint-circle": "1.0.0",
-    "@typechain/ethers-v5": "^1.0.0",
+    "@typechain/ethers-v5": "^6.0.5",
     "@types/jest": "^26.0.23",
-    "@typescript-eslint/eslint-plugin": "^3.8.0",
-    "@typescript-eslint/parser": "^3.8.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "commitizen": "^4.2.3",
     "dotenv": "^8.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-chai-expect": "^1.1.1",
-    "eslint-plugin-chai-friendly": "^0.4.1",
+    "eslint": "^7.25.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-chai-expect": "^2.2.0",
+    "eslint-plugin-chai-friendly": "^0.6.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-prettier": "^3.1.2",
     "ethers": "^5.0.8",
     "ganache-cli": "^6.12.2",
-    "git-cz": "3.2.1",
+    "git-cz": "^4.7.6",
     "jest": "^26.6.3",
-    "prettier": "^1.19.1",
+    "prettier": "^2.2.1",
     "prettier-plugin-solidity": "^1.0.0-alpha.36",
     "semantic-release": "^17.4.2",
-    "solhint": "^2.3.0",
-    "solhint-plugin-prettier": "0.0.3",
+    "solhint": "^3.3.4",
+    "solhint-plugin-prettier": "0.0.5",
     "solium": "^1.2.5",
-    "truffle": "^5.3.3",
-    "typechain": "^2.0.0",
-    "typescript": "^3.9.7"
+    "truffle": "^5.3.4",
+    "typechain": "^4.0.3",
+    "typescript": "^4.2.4"
   },
   "config": {
     "commitizen": {
