--- a/package.json
+++ b/package.json
@@ -45,52 +45,51 @@
     ]
   },
   "peerDependencies": {
-    "ethers": ">=4.0.45"
+    "ethers": ">=5.0.8"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.7",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
-    "@babel/plugin-proposal-optional-chaining": "^7.8.3",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-typescript": "^7.8.3",
-    "@babel/register": "^7.8.6",
-    "@commitlint/cli": "8.2.0",
-    "@commitlint/config-conventional": "8.2.0",
-    "@commitlint/prompt": "8.2.0",
+    "@babel/cli": "^7.13.16",
+    "@babel/core": "^7.14.0",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.13.8",
+    "@babel/plugin-proposal-optional-chaining": "^7.13.12",
+    "@babel/preset-env": "^7.14.0",
+    "@babel/preset-typescript": "^7.13.0",
+    "@babel/register": "^7.13.16",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
+    "@commitlint/prompt": "^12.1.1",
     "@ls-age/commitlint-circle": "1.0.0",
-    "@typechain/ethers-v5": "^1.0.0",
-    "@types/jest": "^25.1.4",
-    "@typescript-eslint/eslint-plugin": "^3.8.0",
-    "@typescript-eslint/parser": "^3.8.0",
+    "@typechain/ethers-v5": "^5.0.0",
+    "@types/jest": "^26.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^25.1.0",
-    "chai": "^4.1.2",
+    "babel-jest": "^26.6.3",
+    "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "commitizen": "4.0.3",
+    "commitizen": "^4.2.3",
     "dotenv": "^8.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^6.9.0",
-    "eslint-plugin-chai-expect": "^1.1.1",
-    "eslint-plugin-chai-friendly": "^0.4.1",
+    "eslint": "^7.25.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-chai-expect": "^2.2.0",
+    "eslint-plugin-chai-friendly": "^0.6.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-prettier": "^3.1.2",
     "ethers": "^5.0.8",
-    "ganache-cli": "^6.9.1",
-    "git-cz": "3.2.1",
-    "jest": "^25.1.0",
-    "prettier": "^1.19.1",
+    "ganache-cli": "^6.12.2",
+    "git-cz": "^4.7.6",
+    "jest": "^26.6.3",
+    "prettier": "^2.2.1",
     "prettier-plugin-solidity": "^1.0.0-alpha.36",
-    "semantic-release": "^17.0.4",
-    "solhint": "^2.3.0",
-    "solhint-plugin-prettier": "0.0.3",
+    "semantic-release": "^17.4.2",
+    "solhint": "^3.3.4",
+    "solhint-plugin-prettier": "0.0.5",
     "solium": "^1.2.5",
-    "truffle": "5.1.37",
-    "typechain": "^2.0.0",
-    "typescript": "^3.9.7"
+    "truffle": "^5.3.4",
+    "typechain": "^4.0.3",
+    "typescript": "^4.2.4"
   },
   "config": {
     "commitizen": {
