feat: added hardhat
changed from truffle to hardhat for ease of development
no code change required but testing framework was changed from truffle/web3 to ethers/waffle
nb: prep for upgrading to solidity 0.8

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,10 +12,7 @@
     }
   },
   "globals": {
-    "artifacts": "readonly",
-    "contract": "readonly",
-    "assert": "readonly",
-    "web3": "writable"
+    "ethers": "writable"
   },
   "rules": {
     "import/extensions": "off",
