feat: migrated contracts to sol 0.8
migrated contracts to sol 0.8
updated some test matchers to hardhat matchers
cleaned up readme

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,6 @@
     "stripInternal": true,
     "skipLibCheck": true
   },
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "./test/**/*"],
   "exclude": ["./src/contracts/**/*"]
 }
