--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "dist",
     "src",
     "scripts",
-    "types",
-    "truffle-config.js"
+    "types"
   ],
   "main": "dist/index.js",
   "types": "dist/ts/index.d.ts",
@@ -24,7 +23,7 @@
     "lint:js": "eslint test src --ext .js --ext .ts",
     "lint:js:fix": "npm run lint:js -- --fix",
     "lint:sol": "./node_modules/.bin/solhint contracts/**/*.sol",
-    "lint:sol:fix": "./node_modules/.bin/prettier --write contracts/**/*.sol",
+    "lint:sol:fix": "npm run lint:sol -- --fix",
     "lint": "npm run lint:sol && npm run lint:js",
     "lint:fix": "npm run lint:sol:fix && npm run lint:js:fix",
     "test:sol": "hardhat test",
@@ -47,7 +46,8 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.13.16",
-    "@babel/core": "^7.14.0",
+    "@babel/core": "^7.14.6",
+    "@babel/eslint-parser": "^7.14.7",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.13.8",
     "@babel/plugin-proposal-optional-chaining": "^7.13.12",
@@ -65,13 +65,12 @@
     "@types/jest": "^26.0.23",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
-    "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.3",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "commitizen": "^4.2.4",
     "dotenv": "^8.2.0",
-    "eslint": "^7.25.0",
+    "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-chai-expect": "^2.2.0",
@@ -87,7 +86,7 @@
     "hardhat-watcher": "^2.1.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
-    "prettier-plugin-solidity": "^1.0.0-alpha.36",
+    "prettier-plugin-solidity": "^1.0.0-beta.13",
     "semantic-release": "^17.4.2",
     "solhint": "^3.3.4",
     "solhint-plugin-prettier": "0.0.5",
@@ -103,6 +102,5 @@
   },
   "publishConfig": {
     "access": "public"
-  },
-  "dependencies": {}
+  }
 }
