--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "ganache-cli": "^6.12.2",
     "git-cz": "^4.7.6",
     "hardhat": "^2.4.1",
+    "hardhat-gas-reporter": "^1.0.4",
     "hardhat-typechain": "^0.3.5",
     "hardhat-watcher": "^2.1.1",
     "jest": "^26.6.3",
