feat: add TitleEscrowCloneable (#32)
* feat: added hardhat

changed from truffle to hardhat for ease of development
no code change required but testing framework was changed from truffle/web3 to ethers/waffle
nb: prep for upgrading to solidity 0.8

* feat: migrated contracts to sol 0.8

migrated contracts to sol 0.8
updated some test matchers to hardhat matchers
cleaned up readme

* feat: added TitleEscrowCloneable

* refactor: minting and surrendering

* refactor: test for onERC721Received

* refactor: clean up non-cloneable TitleEscrow and TitleEscrowCreator

* test: fix js test

* fix: linting issues

* refactor: update revert message

* refactor: add _registrySafeTransformFrom

* chore: fix linting issues

* test: add tests for minting and restoring of titles

* chore: remove fixed gas price in reporter

* refactor: revert acceptSurrender to destroyToken

* refactor: remove sendToNewTitleEscrow

* refactor: remove transferTitle which was originally sendToken

* chore: remove test logs

* refactor: clean up and remove config addresses

* test: clean up commented out line

* chore: clean up unused line

* chore: remove logs

* refactor: update require message

* docs: update readme

* docs: update readme again

Co-authored-by: Seth <hullogh@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,9 @@
     "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "stripInternal": true
+    "stripInternal": true,
+    "skipLibCheck": true
   },
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "./test/**/*"],
   "exclude": ["./src/contracts/**/*"]
 }
