--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "extends": ["airbnb-base", "plugin:prettier/recommended"],
   "env": {
     "jest": true
@@ -12,10 +12,7 @@
     }
   },
   "globals": {
-    "artifacts": "readonly",
-    "contract": "readonly",
-    "assert": "readonly",
-    "web3": "writable"
+    "ethers": "writable"
   },
   "rules": {
     "import/extensions": "off",
