revert: add TitleEscrowCloneable (#32)
This reverts commit a1914ef49a22ea65633ac200b391e38c9a0c50d9.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "parser": "@babel/eslint-parser",
+  "parser": "babel-eslint",
   "extends": ["airbnb-base", "plugin:prettier/recommended"],
   "env": {
     "jest": true
@@ -12,7 +12,10 @@
     }
   },
   "globals": {
-    "ethers": "writable"
+    "artifacts": "readonly",
+    "contract": "readonly",
+    "assert": "readonly",
+    "web3": "writable"
   },
   "rules": {
     "import/extensions": "off",
