--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "test:js": "jest --testPathPattern=src",
     "test": "npm run test:sol && npm run test:js",
     "prepare": "npm run build",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "precoverage": "hardhat clean",
+    "coverage": "hardhat coverage"
   },
   "jest": {
     "globalSetup": "./jest/setup.ts",
@@ -91,6 +93,7 @@
     "semantic-release": "^17.4.2",
     "solhint": "^3.3.4",
     "solhint-plugin-prettier": "0.0.5",
+    "solidity-coverage": "^0.7.17",
     "solium": "^1.2.5",
     "ts-generator": "^0.1.1",
     "typechain": "^4.0.3",
