chore: convert hardhat config into typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,10 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "stripInternal": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "esModuleInterop": true
   },
   "include": ["./src/**/*", "./test/**/*"],
+  "files": ["./hardhat.config.ts"],
   "exclude": ["./src/contracts/**/*"]
 }
