--- a/package.json
+++ b/package.json
@@ -64,7 +64,10 @@
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@typechain/ethers-v5": "^7.1.2",
     "@typechain/hardhat": "^2.3.0",
+    "@types/chai": "^4.2.22",
     "@types/jest": "^26.0.23",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^16.10.3",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "babel-jest": "^26.6.3",
@@ -93,6 +96,7 @@
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.17",
     "solium": "^1.2.5",
+    "ts-node": "^10.2.1",
     "typechain": "^5.1.2",
     "typescript": "^4.4.3"
   },
