--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "outDir": "dist/types",
     "target": "esnext",
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
     "jsx": "react",
     "strict": true,
@@ -15,9 +15,12 @@
     "noUnusedParameters": true,
     "stripInternal": true,
     "skipLibCheck": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "typeRoots": ["./node_modules/@types"]
   },
-  "include": ["./src/**/*", "./test/**/*"],
-  "files": ["./hardhat.config.ts"],
+  "ts-node": {
+    "files": true
+  },
+  "include": ["./src/**/*", "./test/**/*", "./hardhat.config.ts"],
   "exclude": ["./src/contracts/**/*"]
 }
