chore: add faker for random testing

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lint:sol:fix": "npm run lint:sol -- --fix",
     "lint": "npm run lint:sol && npm run lint:js",
     "lint:fix": "npm run lint:sol:fix && npm run lint:js:fix",
-    "test:sol": "hardhat test",
+    "test:sol": "TS_NODE_TRANSPILE_ONLY=1 hardhat test",
     "test:js": "jest --testPathPattern=src",
     "test": "npm run test:sol && npm run test:js",
     "prepare": "npm run build",
@@ -66,6 +66,7 @@
     "@typechain/hardhat": "^2.3.0",
     "@types/chai": "^4.2.22",
     "@types/chai-as-promised": "^7.1.4",
+    "@types/faker": "^5.5.8",
     "@types/jest": "^26.0.23",
     "@types/mocha": "^9.0.0",
     "@types/node": "^15.6.1",
@@ -85,6 +86,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.7",
+    "faker": "^5.5.3",
     "git-cz": "^4.7.6",
     "hardhat": "^2.6.4",
     "hardhat-gas-reporter": "^1.0.4",
