--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
     "@commitlint/prompt": "^12.1.1",
+    "@defi-wonderland/smock": "^2.0.7",
     "@ls-age/commitlint-circle": "1.0.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
