--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:sol": "hardhat compile",
     "build:js:copy-src": "babel src -d dist --ignore src/**/*.spec.ts,src/**/*.test.ts -x .js,.ts,.tsx --copy-files",
     "build:js": "tsc --emitDeclarationOnly && npm run build:js:copy-src",
-    "build:js:copy-types": "mkdir -p ./dist/types && cp ./src/contracts/*.d.ts ./dist/types/contracts",
+    "build:js:copy-types": "mkdir -p ./dist/types/contracts && cp ./src/contracts/*.d.ts ./dist/types/contracts",
     "build": "npm run clean:build && npm run build:sol && npm run build:js && npm run build:js:copy-types",
     "clean:build": "hardhat clean && rm -rf ./dist && rm -rf ./src/contracts",
     "commit": "git-cz",
@@ -31,7 +31,7 @@
     "test": "npm run test:sol && npm run test:js",
     "prepare": "npm run build",
     "semantic-release": "semantic-release",
-    "precoverage": "hardhat clean",
+    "precoverage": "hardhat clean && npm run build:sol",
     "coverage": "hardhat coverage"
   },
   "jest": {
@@ -70,7 +70,7 @@
     "@types/faker": "^5.5.8",
     "@types/jest": "^26.0.23",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^15.6.1",
+    "@types/node": "^15.14.9",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "babel-jest": "^26.6.3",
