ci: update comment block in codecov

--- a/codecov.yml
+++ b/codecov.yml
@@ -4,3 +4,9 @@ coverage:
       default:
         target: auto
         threshold: 1%
+comment:
+  layout: "reach, diff, flags, files"
+  behavior: default
+  require_changes: false
+  require_head: no
+  require_base: no
