feat(deployment): add hardhat deployment tasks

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build:js:copy-src": "babel src -d dist --ignore src/**/*.spec.ts,src/**/*.test.ts -x .js,.ts,.tsx --copy-files",
     "build:js": "tsc --emitDeclarationOnly && npm run build:js:copy-src",
     "build:js:copy-types": "mkdir -p ./dist/types/contracts && cp ./src/contracts/*.d.ts ./dist/types/contracts",
-    "build": "npm run clean:build && npm run build:sol && npm run build:js && npm run build:js:copy-types",
+    "build": "npm run clean:build && TS_NODE_TRANSPILE_ONLY=1 npm run build:sol && npm run build:js && npm run build:js:copy-types",
     "clean:build": "hardhat clean && rm -rf ./dist && rm -rf ./src/contracts",
     "commit": "git-cz",
     "commit:retry": "npm run commit -- --retry",
@@ -64,6 +64,7 @@
     "@ls-age/commitlint-circle": "1.0.0",
     "@maticnetwork/fx-portal": "^1.0.4",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^2.1.7",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.3.2",
     "@typechain/ethers-v5": "^7.1.2",
@@ -81,6 +82,7 @@
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "commitizen": "^4.2.4",
+    "consola": "^2.15.3",
     "dotenv": "^8.2.0",
     "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
