--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "stripInternal": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "emitDeclarationOnly": true,
     "baseUrl": ".",
     "paths": {
       "@tradetrust/contracts": ["./src/contracts"]
