--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@types/jest": "^26.0.23",
     "@types/mocha": "^9.0.0",
     "@types/node": "^15.14.9",
+    "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "babel-jest": "^26.6.3",
@@ -106,9 +107,11 @@
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.17",
     "solium": "^1.2.5",
+    "spinnies": "^0.5.1",
     "ts-node": "^10.2.1",
     "typechain": "^5.1.2",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "uuid": "^8.3.2"
   },
   "config": {
     "commitizen": {
