chore: convert to typescript setup (#43)

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:sol": "hardhat compile",
     "build:js:copy-src": "babel src -d dist --ignore src/**/*.spec.ts,src/**/*.test.ts -x .js,.ts,.tsx --copy-files",
     "build:js": "tsc --emitDeclarationOnly && npm run build:js:copy-src",
-    "build:js:copy-types": "mkdir -p ./dist/types && cp ./src/contracts/*.d.ts ./dist/types/contracts",
+    "build:js:copy-types": "mkdir -p ./dist/types/contracts && cp ./src/contracts/*.d.ts ./dist/types/contracts",
     "build": "npm run clean:build && npm run build:sol && npm run build:js && npm run build:js:copy-types",
     "clean:build": "hardhat clean && rm -rf ./dist && rm -rf ./src/contracts",
     "commit": "git-cz",
@@ -26,12 +26,12 @@
     "lint:sol:fix": "npm run lint:sol -- --fix",
     "lint": "npm run lint:sol && npm run lint:js",
     "lint:fix": "npm run lint:sol:fix && npm run lint:js:fix",
-    "test:sol": "hardhat test",
+    "test:sol": "TS_NODE_TRANSPILE_ONLY=1 hardhat test",
     "test:js": "jest --testPathPattern=src",
     "test": "npm run test:sol && npm run test:js",
     "prepare": "npm run build",
     "semantic-release": "semantic-release",
-    "precoverage": "hardhat clean",
+    "precoverage": "hardhat clean && npm run build:sol",
     "coverage": "hardhat coverage"
   },
   "jest": {
@@ -59,15 +59,22 @@
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
     "@commitlint/prompt": "^12.1.1",
+    "@defi-wonderland/smock": "^2.0.7",
     "@ls-age/commitlint-circle": "1.0.0",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@typechain/ethers-v5": "^7.1.2",
     "@typechain/hardhat": "^2.3.0",
+    "@types/chai": "^4.2.22",
+    "@types/chai-as-promised": "^7.1.4",
+    "@types/faker": "^5.5.8",
     "@types/jest": "^26.0.23",
-    "@typescript-eslint/eslint-plugin": "^4.32.0",
-    "@typescript-eslint/parser": "^4.32.0",
+    "@types/mocha": "^9.0.0",
+    "@types/node": "^15.14.9",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "babel-jest": "^26.6.3",
+    "babel-plugin-module-resolver": "^4.1.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "commitizen": "^4.2.4",
@@ -81,6 +88,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.7",
+    "faker": "^5.5.3",
     "git-cz": "^4.7.6",
     "hardhat": "^2.6.4",
     "hardhat-gas-reporter": "^1.0.4",
@@ -93,6 +101,7 @@
     "solhint-plugin-prettier": "^0.0.5",
     "solidity-coverage": "^0.7.17",
     "solium": "^1.2.5",
+    "ts-node": "^10.2.1",
     "typechain": "^5.1.2",
     "typescript": "^4.4.3"
   },
