feat: add support for polygon (#51)

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "lint": "npm run lint:sol && npm run lint:js",
     "lint:fix": "npm run lint:sol:fix && npm run lint:js:fix",
     "test:sol": "TS_NODE_TRANSPILE_ONLY=1 hardhat test",
+    "test:sol:watch": "TS_NODE_TRANSPILE_ONLY=1 hardhat watch test",
     "test:js": "jest --testPathPattern=src",
     "test": "npm run test:sol && npm run test:js",
     "prepare": "npm run build",
@@ -61,6 +62,7 @@
     "@commitlint/prompt": "^12.1.1",
     "@defi-wonderland/smock": "^2.0.7",
     "@ls-age/commitlint-circle": "1.0.0",
+    "@maticnetwork/fx-portal": "^1.0.4",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@typechain/ethers-v5": "^7.1.2",
