--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "author": "GovTech",
   "license": "Apache-2.0",
   "scripts": {
-    "build:sol": "hardhat compile",
+    "build:sol": "TS_NODE_TRANSPILE_ONLY=1 hardhat compile",
     "build:js:copy-src": "babel src -d dist --ignore src/**/*.spec.ts,src/**/*.test.ts -x .js,.ts,.tsx --copy-files",
-    "build:js": "tsc --emitDeclarationOnly && npm run build:js:copy-src",
+    "build:js": "tsc && npm run build:js:copy-src",
     "build:js:copy-types": "mkdir -p ./dist/types/contracts && cp ./src/contracts/*.d.ts ./dist/types/contracts",
     "build": "npm run clean:build && npm run build:sol && npm run build:js && npm run build:js:copy-types",
-    "clean:build": "hardhat clean && rm -rf ./dist && rm -rf ./src/contracts",
+    "clean:build": "TS_NODE_TRANSPILE_ONLY=1 hardhat clean && rm -rf ./dist && rm -rf ./src/contracts",
     "commit": "git-cz",
     "commit:retry": "npm run commit -- --retry",
     "lint:js": "eslint test src --ext .js --ext .ts",
@@ -32,7 +32,7 @@
     "test": "npm run test:sol && npm run test:js",
     "prepare": "npm run build",
     "semantic-release": "semantic-release",
-    "precoverage": "hardhat clean && npm run build:sol",
+    "precoverage": "npm run clean:build && npm run build:sol",
     "coverage": "hardhat coverage"
   },
   "jest": {
@@ -64,6 +64,7 @@
     "@ls-age/commitlint-circle": "1.0.0",
     "@maticnetwork/fx-portal": "^1.0.4",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^2.1.7",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.3.2",
     "@typechain/ethers-v5": "^7.1.2",
@@ -74,6 +75,7 @@
     "@types/jest": "^26.0.23",
     "@types/mocha": "^9.0.0",
     "@types/node": "^15.14.9",
+    "@types/uuid": "^8.3.3",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "babel-jest": "^26.6.3",
@@ -81,7 +83,7 @@
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "commitizen": "^4.2.4",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
@@ -106,7 +108,8 @@
     "solium": "^1.2.5",
     "ts-node": "^10.2.1",
     "typechain": "^5.1.2",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "uuid": "^8.3.2"
   },
   "config": {
     "commitizen": {
