--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
     docker:
       - image: 'circleci/node:14'
     environment:
-      ENV_NAME: test
+      ENV_NAME: ci
     steps:
       - checkout
       - run:
@@ -36,12 +36,12 @@ jobs:
           command: NODE_ENV=$ENV_NAME npm run build
       - run:
           name: release
-          command: npm run semantic-release
+          command: NODE_ENV=$ENV_NAME npm run semantic-release
   coverage:
     docker:
       - image: 'circleci/node:14'
     environment:
-      ENV_NAME: test
+      ENV_NAME: ci
     steps:
       - checkout
       - run:
