--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,9 +30,7 @@
   "include": [
     "./src/**/*",
     "./test/**/*",
-    "./hardhat.config.ts",
-    "./tasks/**/*",
-    "./types"
+    "./hardhat.config.ts"
   ],
   "exclude": [
     "./src/contracts/**/*"
