feat: switched v2 to hardhat

--- a/package.json
+++ b/package.json
@@ -4,36 +4,35 @@
   "files": [
     "dist",
     "src",
-    "scripts",
-    "types",
-    "truffle-config.js"
+    "scripts"
   ],
   "main": "dist/index.js",
-  "types": "dist/ts/index.d.ts",
+  "types": "dist/types/index.d.ts",
   "repository": "git@github.com:Open-Attestation/token-registry.git",
   "author": "GovTech",
   "license": "Apache-2.0",
   "scripts": {
-    "build:sol": "truffle build",
+    "build:sol": "hardhat compile",
     "build:js:copy-src": "babel src -d dist --ignore src/**/*.spec.ts,src/**/*.test.ts -x .js,.ts,.tsx --copy-files",
     "build:js": "tsc --emitDeclarationOnly && npm run build:js:copy-src",
-    "build": "npm run build:sol && npm run typechain && npm run build:js",
-    "copy-types": "rm -rf types && mkdir -p types && cp src/contracts/*.d.ts types/ && mkdir -p dist/ts/contracts && cp src/contracts/*.d.ts dist/ts/contracts",
+    "build:js:copy-types": "mkdir -p ./dist/types && cp ./src/contracts/*.d.ts ./dist/types/contracts",
+    "build": "npm run clean:build && npm run build:sol && npm run build:js && npm run build:js:copy-types",
+    "clean:build": "hardhat clean && rm -rf ./dist && rm -rf ./src/contracts",
     "commit": "git-cz",
     "commit:retry": "npm run commit -- --retry",
-    "lint:js": "eslint src --ext .js --ext .ts",
+    "lint:js": "eslint test src --ext .js --ext .ts",
     "lint:js:fix": "npm run lint:js -- --fix",
     "lint:sol": "./node_modules/.bin/solhint contracts/**/*.sol",
-    "lint:sol:fix": "./node_modules/.bin/prettier --write contracts/**/*.sol",
+    "lint:sol:fix": "npm run lint:sol -- --fix",
     "lint": "npm run lint:sol && npm run lint:js",
     "lint:fix": "npm run lint:sol:fix && npm run lint:js:fix",
-    "test:sol": "truffle test",
+    "test:sol": "hardhat test",
     "test:js": "jest --testPathPattern=src",
     "test": "npm run test:sol && npm run test:js",
-    "truffle": "truffle",
-    "typechain": "typechain --target ethers-v5 \"build/contracts/*.json\" --outDir src/contracts && npm run copy-types",
-    "postinstall": "node scripts/postInstall",
-    "semantic-release": "semantic-release"
+    "prepare": "npm run build",
+    "semantic-release": "semantic-release",
+    "precoverage": "hardhat clean",
+    "coverage": "hardhat coverage"
   },
   "jest": {
     "globalSetup": "./jest/setup.ts",
@@ -49,7 +48,8 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.13.16",
-    "@babel/core": "^7.14.0",
+    "@babel/core": "^7.14.6",
+    "@babel/eslint-parser": "^7.14.7",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.13.8",
     "@babel/plugin-proposal-optional-chaining": "^7.13.12",
@@ -60,36 +60,41 @@
     "@commitlint/config-conventional": "^12.1.1",
     "@commitlint/prompt": "^12.1.1",
     "@ls-age/commitlint-circle": "1.0.0",
-    "@typechain/ethers-v5": "^5.0.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@typechain/ethers-v5": "^7.1.2",
+    "@typechain/hardhat": "^2.3.0",
     "@types/jest": "^26.0.23",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "babel-eslint": "^10.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
     "babel-jest": "^26.6.3",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "commitizen": "^4.2.3",
+    "commitizen": "^4.2.4",
     "dotenv": "^8.2.0",
-    "eslint": "^7.25.0",
+    "eslint": "^7.29.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-chai-expect": "^2.2.0",
     "eslint-plugin-chai-friendly": "^0.6.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-prettier": "^3.1.2",
-    "ethers": "^5.0.8",
-    "ganache-cli": "^6.12.2",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.4.7",
     "git-cz": "^4.7.6",
-    "jest": "^26.6.3",
-    "prettier": "^2.2.1",
-    "prettier-plugin-solidity": "^1.0.0-alpha.36",
+    "hardhat": "^2.6.4",
+    "hardhat-gas-reporter": "^1.0.4",
+    "hardhat-watcher": "^2.1.1",
+    "jest": "^27.2.4",
+    "prettier": "^2.4.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.13",
     "semantic-release": "^17.4.2",
-    "solhint": "^3.3.4",
-    "solhint-plugin-prettier": "0.0.5",
+    "solhint": "^3.3.6",
+    "solhint-plugin-prettier": "^0.0.5",
+    "solidity-coverage": "^0.7.17",
     "solium": "^1.2.5",
-    "truffle": "^5.3.4",
-    "typechain": "^4.0.3",
-    "typescript": "^4.2.4"
+    "typechain": "^5.1.2",
+    "typescript": "^4.4.3"
   },
   "config": {
     "commitizen": {
